--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.10.3",
-    "react-router-dom": "^6.23.1"
+    "react-photo-album": "^2.4.1",
+    "react-router-dom": "^6.23.1",
+    "yet-another-react-lightbox": "^3.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
